--- a/web/templates/tfg/listar_noticias.html
+++ b/web/templates/tfg/listar_noticias.html
@@ -8,18 +8,27 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css'}">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Bevan|Fredericka+the+Great|Montserrat|Pacifico|Paytone+One|Raleway|Rubik+Mono+One|Six+Caps|Source+Code+Pro|Source+Sans+Pro|Special+Elite&display=swap" rel="stylesheet">
+    <style>
+    @font-face {
+        font-family: '215000E';
+        src: local('215000E'),
+            url('{% static 'fonts/215000E.ttf' %} format("truetype") ');
+            }
+    </style>
+
 </head>
 <body>
+
 <div class="col">
     <div class="row">
         <div class="col-2"></div>
         <div class="col-8" style="text-align:center;margin-top:48px">
-            <h2>Detector de noticias falsas</h2>
+            <h2 class="title">DETECTOR DE NOTICIAS FALSAS</h2>
         </div>
         <div class="col-2"></div>
     </div>
-    <p></p>
-    <p></p>
+
     <div class="row" style="height:15px"></div>
 
     <div class="row">
@@ -27,20 +36,76 @@
         <div class="col-8">
             <div class="row">
                 <div class="col-11">
-           <div class="form-group">
-            <input class="form-control shbutton" type="text">
-           </div>
+           <form class="form-group" action="/news/buscar_noticia/" method="POST">
+               {% csrf_token %}
+            <input class="form-control" type="text" style="border-radius:22px" value = "{{ news_form.url }}">
+               <button type="submit">
+                        hola
+                </button>
+           </form>
                     </div>
                 <div class="col-1">
-            <svg width="25" height="30" style="margin-left:-25px" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
-  <path fill="#555555" d="M1216 832q0-185-131.5-316.5t-316.5-131.5-316.5 131.5-131.5 316.5 131.5 316.5 316.5 131.5 316.5-131.5 131.5-316.5zm512 832q0 52-38 90t-90 38q-54 0-90-38l-343-342q-179 124-399 124-143 0-273.5-55.5t-225-150-150-225-55.5-273.5 55.5-273.5 150-225 225-150 273.5-55.5 273.5 55.5 225 150 150 225 55.5 273.5q0 220-124 399l343 343q37 37 37 90z"/>
-            </svg></div></div>
+                    </div></div>
         </div>
          <div class="col-2"></div>
     </div>
-    <p></p>
-    <div class="row" style="height:55px"></div>
 
+    <div class="row" id="CHOOSE_OPTION">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
+                    <label class="form-check-label" for="inlineRadio1">Red neuronal</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <label class="form-check-label" for="inlineRadio2">Doc2Vec</label>
+                    </div>
+                </div>
+                <div class="col-3"></div>
+
+            </div>
+        </div>
+        <div class="col-2"></div>
+
+    </div>
+  <div class="row" style="height:15px"></div>
+    <div class="row">
+        <div class="col-2" ></div>
+        <div class="col-8" >
+             <div id="GOOD_RESULT" class="alert alert-success" role="alert">
+           Good!
+        </div>
+        </div>
+        <div class="col-2" ></div>
+
+    </div>
+    <div class="row">
+        <div class="col-2" ></div>
+        <div class="col-8" >
+            <div id="BAD_RESULT"class="alert alert-danger" role="alert">
+            Bad!
+        </div>
+        </div>
+        <div class="col-2" ></div>
+
+    </div>
+    <script>
+    $("#GOOD_RESULT").hide();
+    $("#BAD_RESULT").hide();
+    </script>
+     <!--{% if buenas %}-->
+        <!--<script>-->
+            <!--$("#GOOD_RESULT").show()-->
+        <!--</script>-->
+     <!--{% else %}-->
+        <!--<script>-->
+             <!--$("#BAD_RESULT").show()-->
+        <!--</script>-->
+     <!--{% endif %}-->
     <div class="row">
         <div class="col-6">
          {% block newslist %}
@@ -76,7 +141,11 @@
 
     </div>
      <script>
-                        $( "li" ).css( "background", "rgba(238,238,238,0.6)" );
+                        $( "li" ).css( "background", "rgba(167,213,255, 0.05)" );
+                        $(".list-group-item").css("border","none");
+                        $(".list-group-item").css("border-radius","20px");
+                        $(".badge-secondary").css("background-color","#33867E")
+                        $(".form-control").css("box-shadow","0 0 0 .2rem rgba(0,107,99,.25)")
      </script>
 
     <footer class="footer">
