--- a/web/templates/tfg/listar_noticias.html
+++ b/web/templates/tfg/listar_noticias.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css'}">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Bevan|Fredericka+the+Great|Montserrat|Pacifico|Paytone+One|Raleway|Rubik+Mono+One|Six+Caps|Source+Code+Pro|Source+Sans+Pro|Special+Elite&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <style>
     @font-face {
         font-family: '215000E';
@@ -35,19 +36,27 @@
         <div class="col-2"></div>
         <div class="col-8">
             <div class="row">
-                <div class="col-11">
-           <form class="form-group" action="/news/buscar_noticia/" method="POST">
-               {% csrf_token %}
-            <input class="form-control" type="text" style="border-radius:22px" value = "{{ news_form.url }}">
-               <button type="submit">
-                        hola
+              <form id="BUSCADOR" class="col " action="/news/listar_noticias/" method="POST">
+                  <div class="row">
+                      <div class="col-10">
+                  {% csrf_token %}
+                      {{ news_form.as_p }}
+                          </div>
+                      <div class="col-2">
+                <button type="submit" class="btn btn-default">
+                   <span class="fa fa-search"></span> Search
                 </button>
-           </form>
-                    </div>
-                <div class="col-1">
-                    </div></div>
+                      </div>
+                </div>
+              </form>
+
+            </div>
         </div>
-         <div class="col-2"></div>
+        </div>
+    <script>
+        $("#BUSCADOR").find("label").hide();
+    </script>
+        <div class="col-2"></div>
     </div>
 
     <div class="row" id="CHOOSE_OPTION">
@@ -65,7 +74,31 @@
                     <label class="form-check-label" for="inlineRadio2">Doc2Vec</label>
                     </div>
                 </div>
-                <div class="col-3"></div>
+                <div class="col-3">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalButton">
+  Klick mich
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalButton" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal Titel</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="false">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Das ist der Body von diesem <b>Modal</b></p><p>
+      </p></div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
+        <!-- <button type="button" class="btn btn-primary">Button</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+                </div>
 
             </div>
         </div>
@@ -170,5 +203,5 @@
 <!-- Footer -->
 
 </body>
-<!-- Footer -->
+
 </html>
