--- a/web/templates/static/css/main.css
+++ b/web/templates/static/css/main.css
@@ -91,3 +91,11 @@ body, html {
   max-height: 300px;
   overflow-y: auto;
 }
+
+.inf{
+    width: 20%;
+}
+
+.myImg{
+    background: url("info.png");
+}
